--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,13 +13,19 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@expo/vector-icons": "^14.0.0",
     "expo": "~54.0.0",
     "expo-status-bar": "~3.0.8",
+    "expo-haptics": "~13.0.1",
+    "expo-linear-gradient": "~13.0.2",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.2.0",
+    "@stellar/stellar-sdk": "^11.2.2",
+    "stellar-sdk": "^11.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
