--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~54.0.0",
     "expo-haptics": "~13.0.1",
+    "expo-local-authentication": "~14.0.1",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
