--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,9 +16,10 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~54.0.0",
     "expo-haptics": "~13.0.1",
-    "expo-local-authentication": "~14.0.1",
     "expo-linear-gradient": "~13.0.2",
+    "expo-local-authentication": "~14.0.1",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.13",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
